fix: update link

--- a/index.html
+++ b/index.html
@@ -152,8 +152,8 @@
             Este projeto foi desenvolvido para reforçar lógica, rever conceitos de JavaScript e entender pacotes do Node.js, otimizando a organização do código.
           </p>
           <div class="btns">
-            <a href="https://emilly-andrade-dev.github.io/projeto-cardapio-cafe/">Ver projeto</a>
-            <a href="https://github.com/emilly-andrade-dev/projeto-cardapio-cafe">Ver código</a>
+            <!-- <a href="https://emilly-andrade-dev.github.io/projeto-cardapio-cafe/">Ver projeto</a> -->
+            <a href="https://github.com/emilly-andrade-dev/desafio-dio-simulador-de-corridas-do-mario-kart">Ver código</a>
           </div>
         </div>
         
