fix: correct information in index.html

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
       <h2 class="section-title">Sobre mim</h2>
       <p class="section-text">
         Sou estudante de Análise e Desenvolvimento de Sistemas e futura desenvolvedora full stack. Minha trajetória
-        começou na área de humanas e passou por experiências com docência, atendimento ao público e design gráfico — foi
+        começou na área de humanas e passou por experiências com docência, atendimento ao público e design gráfico, foi
         nesse caminho que descobri a tecnologia como ponte entre criatividade e impacto real.
       </p>
       <p class="section-text">
@@ -68,7 +68,7 @@
       </p>
       <p class="section-text">
         Tenho facilidade em aprender, sou organizada, curiosa e movida por desafios. Acredito que o desenvolvimento full
-        stack vai além da técnica — envolve colaboração, escuta ativa e empatia para construir produtos que realmente
+        stack vai além da técnica, envolve colaboração, escuta ativa e empatia para construir produtos que realmente
         resolvam problemas e melhorem a experiência das pessoas.
       </p>
     </div>
