fix: repair broken links

--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
       <h2 class="section-title">Meus códigos no GitHub</h2>
       <p class="section-subtitle">Meu portfólio no GitHub reflete minha jornada de aprendizado em programação. Lá você
         encontrará projetos e exercícios que demonstram minha evolução e paixão por desafios.</p>
-      <a href="https://github.com/emilly-andrade-dev" target="_blank" class="btn btn-primary">
+      <a href="https://github.com/EmillyAndradeDev" target="_blank" class="btn btn-primary">
         <i class="devicon-github-original"></i> Ver meu GitHub
       </a>
     </div>
@@ -140,8 +140,8 @@
             interfaces.
           </p>
           <div class="btns">
-            <a href="https://emilly-andrade-dev.github.io/projeto-cardapio-cafe/">Ver projeto</a>
-            <a href="https://github.com/emilly-andrade-dev/projeto-cardapio-cafe">Ver código</a>
+            <a href="https://emillyandradedev.github.io/projeto-cardapio-cafe/">Ver projeto</a>
+            <a href="https://github.com/EmillyAndradeDev/projeto-cardapio-cafe">Ver código</a>
           </div>
         </div>
 
@@ -153,7 +153,7 @@
           </p>
           <div class="btns">
             <!-- <a href="https://emilly-andrade-dev.github.io/projeto-cardapio-cafe/">Ver projeto</a> -->
-            <a href="https://github.com/emilly-andrade-dev/desafio-dio-simulador-de-corridas-do-mario-kart">Ver código</a>
+            <a href="https://github.com/EmillyAndradeDev/desafio-dio-simulador-de-corridas-do-mario-kart">Ver código</a>
           </div>
         </div>
         
@@ -168,7 +168,7 @@
       <h2>Contato</h2>
       <p>Me chama no LinkedIn ou manda um e-mail 😊</p>
       <div class="social-links">
-        <a href="https://github.com/emilly-andrade-dev" class="btn-social">
+        <a href="https://github.com/EmillyAndradeDev" class="btn-social">
           <i class="devicon-github-original"></i> GitHub
         </a>
         <a href="https://www.linkedin.com/in/emilly-andrade-ads/" class="btn-social">
