feat: include new project showcase in portfolio

--- a/index.html
+++ b/index.html
@@ -156,6 +156,18 @@
             <a href="https://github.com/EmillyAndradeDev/desafio-dio-simulador-de-corridas-do-mario-kart">Ver código</a>
           </div>
         </div>
+
+        <div class="projeto-card">
+          <img src="assets/img/screenshots/quizz-cacadores-de-erros.jpeg" />
+          <h3>Quizz interativo: Caçadores de Erros</h3>
+          <p>
+            Este projeto foi desenvolvido para exercitar a lógica de programação e a interatividade com o usuário, praticando o controle de fluxo no JavaScript, ao mesmo tempo que refinava as técnicas de estilização e responsividade com CSS.
+          </p>
+          <div class="btns">
+            <a href="https://emillyandradedev.github.io/quizz-cacadores-de-erros-gramatica-e-ortografia/">Ver projeto</a>
+            <a href="https://github.com/EmillyAndradeDev/quizz-cacadores-de-erros-gramatica-e-ortografia">Ver código</a>
+          </div>
+        </div>
         
       </div>
     </div>
