feat: update information in index and add new project

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
   <!-- CABEÇALHO / NAVEGAÇÃO -->
   <header>
     <div class="container nav-wrapper">
+      <img class="logo-pequeno" src="assets/img/logo-EmillyAndradeDev.png" alt="Logo de Emilly Andrade">
       <h1 class="logo">EmillyAndrade<span class="realce">DEV</span></h1>
 
       <!-- Menu mobile com checkbox -->
@@ -58,18 +59,21 @@
       <h2 class="section-title">Sobre mim</h2>
       <p class="section-text">
         Sou estudante de Análise e Desenvolvimento de Sistemas e futura desenvolvedora full stack. Minha trajetória
-        começou na área de humanas e passou por experiências com docência, atendimento ao público e design gráfico, foi
-        nesse caminho que descobri a tecnologia como ponte entre criatividade e impacto real.
+        começou na área de humanas e passou por experiências com docência, atendimento ao público e design gráfico, foi nesse caminho que descobri a tecnologia como ponte entre criatividade e impacto real.
       </p>
-      <p class="section-text">
+      <!-- <p class="section-text">
         Hoje, estou focada no desenvolvimento web, atuando principalmente com front-end, mas expandindo meus
         conhecimentos para o back-end com Node.js e JavaScript moderno. Meu objetivo é dominar todas as camadas do
         desenvolvimento e criar soluções completas, funcionais e acessíveis.
+      </p> -->
+      <p class="section-text">
+        Atualmente, estou focada no desenvolvimento web, atuando principalmente com front-end usando HTML5, CSS3 (incluindo Flexbox, Grid, responsividade e animações) e JavaScript para manipulação do DOM e criação de interfaces dinâmicas. Também aplico boas práticas para tornar o código acessível e eficiente.
       </p>
       <p class="section-text">
-        Tenho facilidade em aprender, sou organizada, curiosa e movida por desafios. Acredito que o desenvolvimento full
-        stack vai além da técnica, envolve colaboração, escuta ativa e empatia para construir produtos que realmente
-        resolvam problemas e melhorem a experiência das pessoas.
+        No back-end, tenho explorado Node.js para criar servidores, trabalhar com arquivos JSON e construir APIs simples que se comunicam com o front-end. Além disso, utilizo Git e GitHub para controle de versão, organização e colaboração em projetos, garantindo um fluxo de trabalho profissional e transparente.
+      </p>
+      <p class="section-text">
+        Tenho facilidade em aprender, sou organizada, curiosa e movida por desafios. Acredito que o desenvolvimento full stack vai além da técnica, envolve colaboração, escuta ativa e empatia para construir produtos que realmente resolvam problemas e melhorem a experiência das pessoas.
       </p>
     </div>
   </section>
@@ -158,17 +162,17 @@
         </div>
 
         <div class="projeto-card">
-          <img src="assets/img/screenshots/quizz-cacadores-de-erros.jpeg" />
-          <h3>Quizz interativo: Caçadores de Erros</h3>
+          <img src="assets/img/screenshots/quizz-cacadores-de-erros-02.jpeg" />
+          <h3>Quizz Interativo: Caçadores de Erros - Gramática</h3>
           <p>
-            Este projeto foi desenvolvido para exercitar a lógica de programação e a interatividade com o usuário, praticando o controle de fluxo no JavaScript, ao mesmo tempo que refinava as técnicas de estilização e responsividade com CSS.
+            Este projeto foi desenvolvido para exercitar a lógica de programação e a interatividade com o usuário, praticando o controle de fluxo no JavaScript, ao mesmo tempo que treinava as técnicas de estilização e responsividade com CSS.
           </p>
           <div class="btns">
             <a href="https://emillyandradedev.github.io/quizz-cacadores-de-erros-gramatica-e-ortografia/">Ver projeto</a>
             <a href="https://github.com/EmillyAndradeDev/quizz-cacadores-de-erros-gramatica-e-ortografia">Ver código</a>
           </div>
         </div>
-        
+
       </div>
     </div>
   </section>
