feat: add new project to portfolio

--- a/index.html
+++ b/index.html
@@ -59,7 +59,8 @@
       <h2 class="section-title">Sobre mim</h2>
       <p class="section-text">
         Sou estudante de Análise e Desenvolvimento de Sistemas e futura desenvolvedora full stack. Minha trajetória
-        começou na área de humanas e passou por experiências com docência, atendimento ao público e design gráfico, foi nesse caminho que descobri a tecnologia como ponte entre criatividade e impacto real.
+        começou na área de humanas e passou por experiências com docência, atendimento ao público e design gráfico, foi
+        nesse caminho que descobri a tecnologia como ponte entre criatividade e impacto real.
       </p>
       <!-- <p class="section-text">
         Hoje, estou focada no desenvolvimento web, atuando principalmente com front-end, mas expandindo meus
@@ -67,13 +68,19 @@
         desenvolvimento e criar soluções completas, funcionais e acessíveis.
       </p> -->
       <p class="section-text">
-        Atualmente, estou focada no desenvolvimento web, atuando principalmente com front-end usando HTML5, CSS3 (incluindo Flexbox, Grid, responsividade e animações) e JavaScript para manipulação do DOM e criação de interfaces dinâmicas. Também aplico boas práticas para tornar o código acessível e eficiente.
+        Atualmente, estou focada no desenvolvimento web, atuando principalmente com front-end usando HTML5, CSS3
+        (incluindo Flexbox, Grid, responsividade e animações) e JavaScript para manipulação do DOM e criação de
+        interfaces dinâmicas. Também aplico boas práticas para tornar o código acessível e eficiente.
       </p>
       <p class="section-text">
-        No back-end, tenho explorado Node.js para criar servidores, trabalhar com arquivos JSON e construir APIs simples que se comunicam com o front-end. Além disso, utilizo Git e GitHub para controle de versão, organização e colaboração em projetos, garantindo um fluxo de trabalho profissional e transparente.
+        No back-end, tenho explorado Node.js para criar servidores, trabalhar com arquivos JSON e construir APIs simples
+        que se comunicam com o front-end. Além disso, utilizo Git e GitHub para controle de versão, organização e
+        colaboração em projetos, garantindo um fluxo de trabalho profissional e transparente.
       </p>
       <p class="section-text">
-        Tenho facilidade em aprender, sou organizada, curiosa e movida por desafios. Acredito que o desenvolvimento full stack vai além da técnica, envolve colaboração, escuta ativa e empatia para construir produtos que realmente resolvam problemas e melhorem a experiência das pessoas.
+        Tenho facilidade em aprender, sou organizada, curiosa e movida por desafios. Acredito que o desenvolvimento full
+        stack vai além da técnica, envolve colaboração, escuta ativa e empatia para construir produtos que realmente
+        resolvam problemas e melhorem a experiência das pessoas.
       </p>
     </div>
   </section>
@@ -153,7 +160,8 @@
           <img src="assets/img/screenshots/simulador-de-partidas-mario-kart-desafio-dio.jpeg" />
           <h3>Desafio Back-end: Simulador de Partidas do Mario Kart</h3>
           <p>
-            Este projeto foi desenvolvido para reforçar lógica, rever conceitos de JavaScript e entender pacotes do Node.js, otimizando a organização do código.
+            Este projeto foi desenvolvido para reforçar lógica, rever conceitos de JavaScript e entender pacotes do
+            Node.js, otimizando a organização do código.
           </p>
           <div class="btns">
             <!-- <a href="https://emilly-andrade-dev.github.io/projeto-cardapio-cafe/">Ver projeto</a> -->
@@ -165,11 +173,29 @@
           <img src="assets/img/screenshots/quizz-cacadores-de-erros-02.jpeg" />
           <h3>Quizz Interativo: Caçadores de Erros - Gramática</h3>
           <p>
-            Este projeto foi desenvolvido para exercitar a lógica de programação e a interatividade com o usuário, praticando o controle de fluxo no JavaScript, ao mesmo tempo que treinava as técnicas de estilização e responsividade com CSS.
+            Este projeto foi desenvolvido para exercitar a lógica de programação e a interatividade com o usuário,
+            praticando o controle de fluxo no JavaScript, ao mesmo tempo que treinava as técnicas de estilização e
+            responsividade com CSS.
           </p>
           <div class="btns">
-            <a href="https://emillyandradedev.github.io/quizz-cacadores-de-erros-gramatica-e-ortografia/">Ver projeto</a>
+            <a href="https://emillyandradedev.github.io/quizz-cacadores-de-erros-gramatica-e-ortografia/">Ver
+              projeto</a>
             <a href="https://github.com/EmillyAndradeDev/quizz-cacadores-de-erros-gramatica-e-ortografia">Ver código</a>
+          </div>
+        </div>
+
+        <div class="projeto-card">
+          <img src="assets/img/screenshots/rpg-aventuras.jpeg" />
+          <h3>RPG - Escolha Sua Aventura </h3>
+          <p>
+            Um jogo interativo no estilo “Escolha sua aventura”, onde cada decisão leva a caminhos diferentes,
+            resultando em finais variados. O projeto é modular, permitindo criar e jogar várias histórias no mesmo
+            sistema, apenas alterando os dados da aventura.
+          </p>
+          <div class="btns">
+            <a href="https://emillyandradedev.github.io/rpg-escolha-sua-aventura/">Ver projeto</a>
+            <a href="https://github.com/EmillyAndradeDev/rpg-escolha-sua-aventura">Ver
+              código</a>
           </div>
         </div>
 
@@ -199,13 +225,11 @@
 
   <!-- FOOTER -->
   <footer>
-      <p>
-        Template criado por
-        <a href="https://github.com/yasmngoncalves" target="_blank"
-          >@yasmndev</a
-        >
-        • Livre para usar e personalizar 🦋
-      </p>
+    <p>
+      Template criado por
+      <a href="https://github.com/yasmngoncalves" target="_blank">@yasmndev</a>
+      • Livre para usar e personalizar 🦋
+    </p>
   </footer>
 
   <!-- SCRIPT: Animação Hello World na Hero -->
