docs: improve About Me content in index.html

--- a/index.html
+++ b/index.html
@@ -58,29 +58,16 @@
     <div class="container about-text">
       <h2 class="section-title">Sobre mim</h2>
       <p class="section-text">
-        Sou estudante de Análise e Desenvolvimento de Sistemas e futura desenvolvedora full stack. Minha trajetória
-        começou na área de humanas e passou por experiências com docência, atendimento ao público e design gráfico, foi
-        nesse caminho que descobri a tecnologia como ponte entre criatividade e impacto real.
-      </p>
-      <!-- <p class="section-text">
-        Hoje, estou focada no desenvolvimento web, atuando principalmente com front-end, mas expandindo meus
-        conhecimentos para o back-end com Node.js e JavaScript moderno. Meu objetivo é dominar todas as camadas do
-        desenvolvimento e criar soluções completas, funcionais e acessíveis.
-      </p> -->
-      <p class="section-text">
-        Atualmente, estou focada no desenvolvimento web, atuando principalmente com front-end usando HTML5, CSS3
-        (incluindo Flexbox, Grid, responsividade e animações) e JavaScript para manipulação do DOM e criação de
-        interfaces dinâmicas. Também aplico boas práticas para tornar o código acessível e eficiente.
+        Sou estudante de Análise e Desenvolvimento de Sistemas e futura <strong>desenvolvedora full stack</strong>. Minha trajetória começou na área de humanas e passou por experiências com docência, atendimento ao público e design gráfico, foi nesse caminho que descobri a tecnologia como ponte entre criatividade e impacto real.
       </p>
       <p class="section-text">
-        No back-end, tenho explorado Node.js para criar servidores, trabalhar com arquivos JSON e construir APIs simples
-        que se comunicam com o front-end. Além disso, utilizo Git e GitHub para controle de versão, organização e
-        colaboração em projetos, garantindo um fluxo de trabalho profissional e transparente.
+        Atualmente, estou focada no desenvolvimento web, com foco em <strong>front-end</strong> usando HTML5, CSS3 (Flexbox, Grid, responsividade e animações), JavaScript e TypeScript para criação de interfaces dinâmicas, manipulação do DOM e aplicação de lógica de programação avançada. No <strong>back-end</strong>, trabalho com Node.js, modularização de projetos com CommonJS e ESM, criação de APIs, manipulação de JSON, integração de sistemas e automação de tarefas utilizando npm. Também aplico boas práticas de debugging, testes e manutenção de código.
       </p>
       <p class="section-text">
-        Tenho facilidade em aprender, sou organizada, curiosa e movida por desafios. Acredito que o desenvolvimento full
-        stack vai além da técnica, envolve colaboração, escuta ativa e empatia para construir produtos que realmente
-        resolvam problemas e melhorem a experiência das pessoas.
+        Tenho experiência com controle de versão usando Git e GitHub, colaboração em projetos open source, e metodologias ágeis como Scrum e Kanban, garantindo produtividade, organização e trabalho em equipe. Além disso, busco soluções eficientes com atenção à <strong>acessibilidade, usabilidade e experiência do usuário</strong>.
+      </p>
+      <p class="section-text">
+        Sou organizada, curiosa, comunicativa e movida por desafios. Acredito que o desenvolvimento full stack vai além da técnica, envolvendo <strong>colaboração, empatia e pensamento crítico</strong> para criar produtos que realmente resolvam problemas e causem impacto positivo.
       </p>
     </div>
   </section>
@@ -104,8 +91,16 @@
           <span>JavaScript</span>
         </div>
         <div class="skill-card">
+          <i class="devicon-typescript-original colored"></i>
+          <span>TypeScript</span>
+        </div>
+        <div class="skill-card">
           <i class="devicon-nodejs-plain-wordmark colored"></i>
           <span>Node.js</span>
+        </div>
+        <div class="skill-card">
+          <i class="devicon-npm-original-wordmark colored"></i>
+          <span>NPM</span>
         </div>
         <div class="skill-card">
           <i class="devicon-python-plain colored"></i>
@@ -122,6 +117,10 @@
         <div class="skill-card">
           <i class="devicon-github-original colored"></i>
           <span>GitHub</span>
+        </div>
+        <div class="skill-card">
+          <i class="devicon-vscode-plain colored"></i>
+          <span>VSCode</span>
         </div>
       </div>
     </div>
