docs: improve About Me content in index.html

--- a/index.html
+++ b/index.html
@@ -58,16 +58,26 @@
     <div class="container about-text">
       <h2 class="section-title">Sobre mim</h2>
       <p class="section-text">
-        Sou estudante de Análise e Desenvolvimento de Sistemas e futura <strong>desenvolvedora full stack</strong>. Minha trajetória começou na área de humanas e passou por experiências com docência, atendimento ao público e design gráfico, foi nesse caminho que descobri a tecnologia como ponte entre criatividade e impacto real.
+        Sou estudante de Análise e Desenvolvimento de Sistemas e futura <strong>desenvolvedora full stack</strong>.
+        Minha trajetória começou na área de humanas e passou por experiências com docência, atendimento ao público e
+        design gráfico, foi nesse caminho que descobri a tecnologia como ponte entre criatividade e impacto real.
       </p>
       <p class="section-text">
-        Atualmente, estou focada no desenvolvimento web, com foco em <strong>front-end</strong> usando HTML5, CSS3 (Flexbox, Grid, responsividade e animações), JavaScript e TypeScript para criação de interfaces dinâmicas, manipulação do DOM e aplicação de lógica de programação avançada. No <strong>back-end</strong>, trabalho com Node.js, modularização de projetos com CommonJS e ESM, criação de APIs, manipulação de JSON, integração de sistemas e automação de tarefas utilizando npm. Também aplico boas práticas de debugging, testes e manutenção de código.
+        Atualmente, estou focada no desenvolvimento web, com foco em <strong>front-end</strong> usando HTML5, CSS3
+        (Flexbox, Grid, responsividade e animações), JavaScript e TypeScript para criação de interfaces dinâmicas,
+        manipulação do DOM e aplicação de lógica de programação avançada. No <strong>back-end</strong>, trabalho com
+        Node.js, REST APIs, modularização de projetos com CommonJS e ESM, manipulação de JSON, integração de sistemas e
+        automação de tarefas utilizando npm. Também aplico boas práticas de debugging, testes e manutenção de
       </p>
       <p class="section-text">
-        Tenho experiência com controle de versão usando Git e GitHub, colaboração em projetos open source, e metodologias ágeis como Scrum e Kanban, garantindo produtividade, organização e trabalho em equipe. Além disso, busco soluções eficientes com atenção à <strong>acessibilidade, usabilidade e experiência do usuário</strong>.
+        Tenho experiência com controle de versão usando Git e GitHub, colaboração em projetos open source, e
+        metodologias ágeis como Scrum e Kanban, garantindo produtividade, organização e trabalho em equipe. Além disso,
+        busco soluções eficientes com atenção à <strong>acessibilidade, usabilidade e experiência do usuário</strong>.
       </p>
       <p class="section-text">
-        Sou organizada, curiosa, comunicativa e movida por desafios. Acredito que o desenvolvimento full stack vai além da técnica, envolvendo <strong>colaboração, empatia e pensamento crítico</strong> para criar produtos que realmente resolvam problemas e causem impacto positivo.
+        Sou organizada, curiosa, comunicativa e movida por desafios. Acredito que o desenvolvimento full stack vai além
+        da técnica, envolvendo <strong>colaboração, empatia e pensamento crítico</strong> para criar produtos que
+        realmente resolvam problemas e causem impacto positivo.
       </p>
     </div>
   </section>
@@ -103,13 +113,17 @@
           <span>NPM</span>
         </div>
         <div class="skill-card">
+          <i class="devicon-terminal-plain"></i>
+          <span>REST APIs</span>
+        </div>
+        <div class="skill-card">
           <i class="devicon-python-plain colored"></i>
           <span>Python</span>
         </div>
-        <div class="skill-card">
+        <!-- <div class="skill-card">
           <i class="devicon-cplusplus-plain colored"></i>
           <span>C++</span>
-        </div>
+        </div> -->
         <div class="skill-card">
           <i class="devicon-git-plain colored"></i>
           <span>Git</span>
