feat: update projects

--- a/index.html
+++ b/index.html
@@ -156,6 +156,40 @@
     <div class="container">
       <h2>Projetos</h2>
       <div class="projetos-grid">
+
+        <div class="projeto-card">
+          <h3>Podcast Manager</h3>
+          <p>
+            Aplicação backend desenvolvida com Node.js e TypeScript, oferecendo uma API REST para gerenciamento e organização de episódios de podcasts em vídeo, com filtros por nome e categorias, prática de rotas, endpoints e estrutura escalável.
+          </p>
+          <div class="btns">
+            <a href="https://github.com/EmillyAndradeDev/nodejs-typescript-webapi-without-frameworks" target="_blank">Ver código</a>
+          </div>
+        </div>
+
+        <div class="projeto-card">
+          <h3>Node.js Utilities Kit (QRCode & Password)</h3>
+          <p>
+            Kit de utilidades desenvolvido com Node.js, contendo geração de QR Codes e senhas seguras, focado em prática de lógica, módulos e manipulação de dados no backend.
+          </p>
+          <div class="btns">
+            <a href="https://github.com/EmillyAndradeDev/nodejs-qrcode-password-generator" target="_blank">Ver código</a>
+          </div>
+        </div>
+
+        <div class="projeto-card">
+          <!-- <img src="assets/img/screenshots/simulador-de-partidas-mario-kart-desafio-dio.jpeg" /> -->
+          <h3>Desafio Back-end: Simulador de Partidas do Mario Kart</h3>
+          <p>
+            Este projeto foi desenvolvido para reforçar lógica, rever conceitos de JavaScript e entender pacotes do
+            Node.js, otimizando a organização do código.
+          </p>
+          <div class="btns">
+            <!-- <a href="https://emilly-andrade-dev.github.io/projeto-cardapio-cafe/">Ver projeto</a> -->
+            <a href="https://github.com/EmillyAndradeDev/desafio-dio-simulador-de-corridas-do-mario-kart" target="_blank">Ver código</a>
+          </div>
+        </div>
+
         <div class="projeto-card">
           <img src="assets/img/screenshots/projeto-cardapio-poema-cafe-02.jpeg" alt="Print do projeto 1" />
           <h3>Criação de Cardápio para Cafeteria - Poema Café</h3>
@@ -164,21 +198,8 @@
             interfaces.
           </p>
           <div class="btns">
-            <a href="https://emillyandradedev.github.io/projeto-cardapio-cafe/">Ver projeto</a>
-            <a href="https://github.com/EmillyAndradeDev/projeto-cardapio-cafe">Ver código</a>
-          </div>
-        </div>
-
-        <div class="projeto-card">
-          <img src="assets/img/screenshots/simulador-de-partidas-mario-kart-desafio-dio.jpeg" />
-          <h3>Desafio Back-end: Simulador de Partidas do Mario Kart</h3>
-          <p>
-            Este projeto foi desenvolvido para reforçar lógica, rever conceitos de JavaScript e entender pacotes do
-            Node.js, otimizando a organização do código.
-          </p>
-          <div class="btns">
-            <!-- <a href="https://emilly-andrade-dev.github.io/projeto-cardapio-cafe/">Ver projeto</a> -->
-            <a href="https://github.com/EmillyAndradeDev/desafio-dio-simulador-de-corridas-do-mario-kart">Ver código</a>
+            <a href="https://emillyandradedev.github.io/projeto-cardapio-cafe/" target="_blank">Ver projeto</a>
+            <a href="https://github.com/EmillyAndradeDev/projeto-cardapio-cafe" target="_blank">Ver código</a>
           </div>
         </div>
 
@@ -191,9 +212,9 @@
             responsividade com CSS.
           </p>
           <div class="btns">
-            <a href="https://emillyandradedev.github.io/quizz-cacadores-de-erros-gramatica-e-ortografia/">Ver
+            <a href="https://emillyandradedev.github.io/quizz-cacadores-de-erros-gramatica-e-ortografia/" target="_blank">Ver
               projeto</a>
-            <a href="https://github.com/EmillyAndradeDev/quizz-cacadores-de-erros-gramatica-e-ortografia">Ver código</a>
+            <a href="https://github.com/EmillyAndradeDev/quizz-cacadores-de-erros-gramatica-e-ortografia" target="_blank">Ver código</a>
           </div>
         </div>
 
@@ -206,8 +227,8 @@
             sistema, apenas alterando os dados da aventura.
           </p>
           <div class="btns">
-            <a href="https://emillyandradedev.github.io/rpg-escolha-sua-aventura/">Ver projeto</a>
-            <a href="https://github.com/EmillyAndradeDev/rpg-escolha-sua-aventura">Ver
+            <a href="https://emillyandradedev.github.io/rpg-escolha-sua-aventura/" target="_blank">Ver projeto</a>
+            <a href="https://github.com/EmillyAndradeDev/rpg-escolha-sua-aventura" target="_blank">Ver
               código</a>
           </div>
         </div>
