feat: update profile picture

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
   <section class="hero">
     <div class="container hero-grid">
       <div class="hero-img">
-        <img src="assets/img/foto-emilly-andrade.jfif" alt="Foto de perfil" class="profile-img" />
+        <img src="assets/img/emilly-andrade-01.jpeg" alt="Foto de perfil" class="profile-img" />
       </div>
       <div class="hero-text">
         <h2><span class="typed-text" id="typed"></span></h2>
