--- a/index.html
+++ b/index.html
@@ -120,10 +120,6 @@
           <i class="devicon-python-plain colored"></i>
           <span>Python</span>
         </div>
-        <!-- <div class="skill-card">
-          <i class="devicon-cplusplus-plain colored"></i>
-          <span>C++</span>
-        </div> -->
         <div class="skill-card">
           <i class="devicon-git-plain colored"></i>
           <span>Git</span>
@@ -158,35 +154,17 @@
       <div class="projetos-grid">
 
         <div class="projeto-card">
-          <h3>Podcast Manager</h3>
+          <img src="assets/img/screenshots/rpg-aventuras-02.jpeg" />
+          <h3>RPG - Escolha Sua Aventura </h3>
           <p>
-            Aplicação backend desenvolvida com Node.js e TypeScript, oferecendo uma API REST para gerenciamento e organização de episódios de podcasts em vídeo, com filtros por nome e categorias, prática de rotas, endpoints e estrutura escalável.
+            Um jogo interativo no estilo “Escolha sua aventura”, onde cada decisão leva a caminhos diferentes,
+            resultando em finais variados. O projeto é modular, permitindo criar e jogar várias histórias no mesmo
+            sistema, apenas alterando os dados da aventura.
           </p>
           <div class="btns">
-            <a href="https://github.com/EmillyAndradeDev/nodejs-typescript-webapi-without-frameworks" target="_blank">Ver código</a>
-          </div>
-        </div>
-
-        <div class="projeto-card">
-          <h3>Node.js Utilities Kit (QRCode & Password)</h3>
-          <p>
-            Kit de utilidades desenvolvido com Node.js, contendo geração de QR Codes e senhas seguras, focado em prática de lógica, módulos e manipulação de dados no backend.
-          </p>
-          <div class="btns">
-            <a href="https://github.com/EmillyAndradeDev/nodejs-qrcode-password-generator" target="_blank">Ver código</a>
-          </div>
-        </div>
-
-        <div class="projeto-card">
-          <!-- <img src="assets/img/screenshots/simulador-de-partidas-mario-kart-desafio-dio.jpeg" /> -->
-          <h3>Desafio Back-end: Simulador de Partidas do Mario Kart</h3>
-          <p>
-            Este projeto foi desenvolvido para reforçar lógica, rever conceitos de JavaScript e entender pacotes do
-            Node.js, otimizando a organização do código.
-          </p>
-          <div class="btns">
-            <!-- <a href="https://emilly-andrade-dev.github.io/projeto-cardapio-cafe/">Ver projeto</a> -->
-            <a href="https://github.com/EmillyAndradeDev/desafio-dio-simulador-de-corridas-do-mario-kart" target="_blank">Ver código</a>
+            <a href="https://emillyandradedev.github.io/rpg-escolha-sua-aventura/" target="_blank">Ver projeto</a>
+            <a href="https://github.com/EmillyAndradeDev/rpg-escolha-sua-aventura" target="_blank">Ver
+              código</a>
           </div>
         </div>
 
@@ -212,24 +190,50 @@
             responsividade com CSS.
           </p>
           <div class="btns">
-            <a href="https://emillyandradedev.github.io/quizz-cacadores-de-erros-gramatica-e-ortografia/" target="_blank">Ver
+            <a href="https://emillyandradedev.github.io/quizz-cacadores-de-erros-gramatica-e-ortografia/"
+              target="_blank">Ver
               projeto</a>
-            <a href="https://github.com/EmillyAndradeDev/quizz-cacadores-de-erros-gramatica-e-ortografia" target="_blank">Ver código</a>
+            <a href="https://github.com/EmillyAndradeDev/quizz-cacadores-de-erros-gramatica-e-ortografia"
+              target="_blank">Ver código</a>
           </div>
         </div>
 
         <div class="projeto-card">
-          <img src="assets/img/screenshots/rpg-aventuras-02.jpeg" />
-          <h3>RPG - Escolha Sua Aventura </h3>
+          <h3>Node.js Utilities Kit (QRCode & Password)</h3>
           <p>
-            Um jogo interativo no estilo “Escolha sua aventura”, onde cada decisão leva a caminhos diferentes,
-            resultando em finais variados. O projeto é modular, permitindo criar e jogar várias histórias no mesmo
-            sistema, apenas alterando os dados da aventura.
+            Kit de utilidades desenvolvido com Node.js, contendo geração de QR Codes e senhas seguras, focado em prática
+            de lógica, módulos e manipulação de dados no backend.
           </p>
           <div class="btns">
-            <a href="https://emillyandradedev.github.io/rpg-escolha-sua-aventura/" target="_blank">Ver projeto</a>
-            <a href="https://github.com/EmillyAndradeDev/rpg-escolha-sua-aventura" target="_blank">Ver
+            <a href="https://github.com/EmillyAndradeDev/nodejs-qrcode-password-generator" target="_blank">Ver
               código</a>
+          </div>
+        </div>
+
+        <div class="projeto-card">
+          <h3>Podcast Manager</h3>
+          <p>
+            Aplicação backend desenvolvida com Node.js e TypeScript, oferecendo uma API REST para gerenciamento e
+            organização de episódios de podcasts em vídeo, com filtros por nome e categorias, prática de rotas,
+            endpoints e estrutura escalável.
+          </p>
+          <div class="btns">
+            <a href="https://github.com/EmillyAndradeDev/nodejs-typescript-webapi-without-frameworks"
+              target="_blank">Ver código</a>
+          </div>
+        </div>
+
+        <div class="projeto-card">
+          <!-- <img src="assets/img/screenshots/simulador-de-partidas-mario-kart-desafio-dio.jpeg" /> -->
+          <h3>Desafio Back-end: Simulador de Partidas do Mario Kart</h3>
+          <p>
+            Este projeto foi desenvolvido para reforçar lógica, rever conceitos de JavaScript e entender pacotes do
+            Node.js, otimizando a organização do código.
+          </p>
+          <div class="btns">
+            <!-- <a href="https://emilly-andrade-dev.github.io/projeto-cardapio-cafe/">Ver projeto</a> -->
+            <a href="https://github.com/EmillyAndradeDev/desafio-dio-simulador-de-corridas-do-mario-kart"
+              target="_blank">Ver código</a>
           </div>
         </div>
 
@@ -256,15 +260,6 @@
       </div>
     </div>
   </section>
-
-  <!-- FOOTER -->
-  <footer>
-    <p>
-      Template criado por
-      <a href="https://github.com/yasmngoncalves" target="_blank">@yasmndev</a>
-      • Livre para usar e personalizar 🦋
-    </p>
-  </footer>
 
   <!-- SCRIPT: Animação Hello World na Hero -->
   <script>
