feat: update projects

--- a/index.html
+++ b/index.html
@@ -154,6 +154,19 @@
       <div class="projetos-grid">
 
         <div class="projeto-card">
+          <img src="assets/img/screenshots/playtime-store-js-shopping-cart-02.jpeg" alt="Screenshot da página do projeto PlayTime Store Shopping Cart"/>
+          <h3>PlayTime Store - Shopping Cart </h3>
+          <p>
+            Este é um projeto Front-End que simula a lógica funcional de um Carrinho de Compras para a loja de brinquedos fictícia Playtime Store. O foco principal é a demonstração de manipulação do DOM e a aplicação de lógica de negócios (cálculos e gestão de estado) utilizando JavaScript Puro (Vanilla JS).
+          </p>
+          <div class="btns">
+            <a href="https://emillyandradedev.github.io/js-shopping-cart/" target="_blank">Ver projeto</a>
+            <a href="https://github.com/EmillyAndradeDev/js-shopping-cart" target="_blank">Ver
+              código</a>
+          </div>
+        </div>
+
+        <div class="projeto-card">
           <img src="assets/img/screenshots/rpg-aventuras-02.jpeg" />
           <h3>RPG - Escolha Sua Aventura </h3>
           <p>
@@ -169,7 +182,7 @@
         </div>
 
         <div class="projeto-card">
-          <img src="assets/img/screenshots/projeto-cardapio-poema-cafe-02.jpeg" alt="Print do projeto 1" />
+          <img src="assets/img/screenshots/cardapio-poema-cafe-03.jpeg" alt="Screenshot da página do projeto Cardápio Poema Café"/>
           <h3>Criação de Cardápio para Cafeteria - Poema Café</h3>
           <p>
             Cardápio digital totalmente responsivo, construído com HTML5 e CSS3 para prática de layout, grid e design de
@@ -182,7 +195,7 @@
         </div>
 
         <div class="projeto-card">
-          <img src="assets/img/screenshots/quizz-cacadores-de-erros-03.jpeg" />
+          <img src="assets/img/screenshots/quizz-cacadores-de-erros-04.jpeg" alt="Screenshot da página do projeto Quizz de Gramática"/>
           <h3>Quizz Interativo: Caçadores de Erros - Gramática</h3>
           <p>
             Este projeto foi desenvolvido para exercitar a lógica de programação e a interatividade com o usuário,
@@ -199,6 +212,7 @@
         </div>
 
         <div class="projeto-card">
+          <img src="assets/img/screenshots/nodejs-utilities-kit-qrcode-password-01.jpeg" alt="Screenshot da página do projeto Node.js Utilities Kit"/>
           <h3>Node.js Utilities Kit (QRCode & Password)</h3>
           <p>
             Kit de utilidades desenvolvido com Node.js, contendo geração de QR Codes e senhas seguras, focado em prática
